# PWMLFF

./: .gitignore  .gitignore.swp  README.md  convert_dp.py  forcefiled_lmps.py  main.py  pwdata_main.py  pwmlff_main.py  requirements.txt  requirements_cpu.txt
example/: Cu.tar.bz2  EC.tar.bz2  Si.tar.bz2  atom_type_emb_dict.py  dp_lisi_template.json  linear_lisi_template.json  lisi_template.json  lisi_template_train.json  main_dp.py  main_gnn.py  main_linear.py  main_nn.py  nn_lisi_template.json
example/AuAg/: dp_adam.json  dp_lkf.json  nep_adam.json  nep_lkf.json
example/Cu/: 1_500_MOVEMENT  dp_cu.json  mcloud.sh  nep_train.json  slurm.sh  test.json  train.json  valid_movement
example/EC/: EC_MOVEMENT  atom.config  main.py  mcloud_offline.sh  nn_ec.json  slurm.sh  test.json  train.json  train12.json  train34.json  train5.json  train6.json  train7.json  train8.json  valid_MOVEMENT
example/HfO2/: DP_train.json  atom.config  nep_train.json  test.json  train.json
example/LiGePS/: 100_1200k_movement  ligeps.json  mcloud.sh  mcloud_offline.sh  slurm.sh  test.json  train.json
example/LiSi/: atom.config  gpumd_lisi.json  nep.in  nep.txt  nep_lisi_train.json  nep_test.json  run.in  test.json  train.json
example/LiSiC/: dp_train.json  nep_train.json
example/NEP/: std_input.json  test.job  train.job  train.json
example/SiC/: atom.config  slurm.sh  test.json  train.json
example/pwdata/: MOVEMENT  MOVEMENT_ec  extract.json
src/: build.sh  check_env.sh  check_offenv.sh  clean.sh  pwmlff_main.py
src/GPUMD/: README.md
src/NEP/: nep_network.py
src/PWMLFF/: cheby_network.py  dp_network.py  dp_param_extract.py  gnn_network.py  linear_regressor.py  nep_network.py  nep_network_bk.py  nn_network.py  nn_network_bk.py  nn_network_wu.py  nn_param_extract.py
src/PWmatMLFF/: dp_network.py  gnn_network.py  linear_regressor.py  nn_network.py
src/aux/: extract_dp.py  extract_ff.py  extract_nn.py  feat_modifier.py  gnn_convert.py  inference_plot.py  opts.py  plot_evaluation.py  plot_nn_inference.py  poscar2lammps.py  slice.py
src/check/: check_env.sh  check_env_cpu.sh  check_offenv.sh  check_offenv_cpu.sh
src/feature/NEP_GPU/: CMakeLists.txt
src/feature/NEP_GPU/force/: box.cu  box.cuh  nep3.cu  nep3.cuh  nep3_large_box.cuh  nep3_pybind.cpp
src/feature/NEP_GPU/utilities/: nep_utilities.cuh
src/feature/chebyshev/: CMakeLists.txt  basic.py  descriptor_cheby.py
src/feature/chebyshev/include/: basic.h  descriptor.h  neighborList.h  radial.h
src/feature/chebyshev/src/: descriptor.cpp  descriptor_pybind.cpp  neighborList.cpp
src/feature/chebyshev/test/: test_basic.cpp  test_radial.cpp
src/feature/nep_find_neigh/: CMakeLists.txt  README.md
src/feature/nep_find_neigh/src/: dftd3para.h  nep.cpp  nep.h  pynep.cpp
src/loss/: AutomaticWeightedLoss.py  dploss.py
src/md/: Makefile.mpi  diy.cpp  diy.h  pair_pwmatmlff.cpp  pair_pwmatmlff.h  readme.txt
src/model/: DCN.py  FC.py  FCmix.py  FCold.py  FCres.py  FNO.py  LN.py  MLFF.py  MLFF_v1.py  MLFF_wu.py  calculate_force.py  cheby_net.py  cheby_net_py.py  dmirror.py  dp.py  dp_dp.py  dp_dp_typ_emb.py  dp_dp_typ_emb_Gk.py  dp_dp_typ_emb_Gk5.py  dp_dp_typ_emb_mean.py  dp_embedding.py  dp_embedding_typ_emb.py  embedding.py  nep_fitting.py  nep_net.py  nep_net_bk.py  nep_net_bk_2b.py
src/mods/: __init__.py  adaptive_trainer.py  infer.py
src/op/: CMakeLists.txt  calculate_compress.cpp  calculate_compress_grad.cpp  calculate_force.cpp  calculate_force_grad.cpp  calculate_virial_force.cpp  calculate_virial_force_grad.cpp  op_declare.h  register_op.cpp  setup.py
src/op/cmake/cpu/: CMakeLists.txt
src/op/cmake/gpu/: CMakeLists.txt
src/op/include/: CalcOps.h  calculate_compress.h  calculate_compress_grad.h  calculate_force.h  calculate_force_grad.h  calculate_nepfeat.h  calculate_nepfeat_grad.h  calculate_nepfeatmb.h  calculate_nepneighbor.h  cpu_calculate_nepneighbor.h  nep_cpu.h  op_declare.h
src/op/kernel/: calculateCompress.cu  calculateCompress_grad.cu  calculateForce.cu  calculateForceGrad.cu  calculateNepFeat.cu  calculateNepFeat_grad.cu  calculateNepFeat_gradmb.cu  calculateNepFeat_secondgradout.cu  calculateNepFeatmb.cu  calculateNepForce.cu  calculateNepMbFeat.cu  calculateNepMbFeat_grad.cu  calculateNepMbFeat_secondgradout.cu  calculateNepNeighbor.cu  calculateNepVirial.cu  calculateVirial.cu  calculateVirialGrad.cu
src/op/kernel/utilities/: common.cuh  error.cuh  gpu_vector.cu  gpu_vector.cuh  main_common.cu  nep3_small_box.cuh  nep3_small_box_mbgrad.cuh  nep_utilities.cuh  nep_utilities_mb_secondc.cuh  nep_utilities_mbgrad.cuh
src/op/op.egg-info/: PKG-INFO  SOURCES.txt
src/op/src/: CalcOps.cpp  CalcOps_bind.cpp  CalcOps_bind_cpu.cpp  CalcOps_cpu.cpp  calculate_compress.cpp  calculate_compress_grad.cpp  calculate_force.cpp  calculate_force_grad.cpp  calculate_nepfeat.cpp  calculate_nepfeat_grad.cpp  calculate_nepfeatmb.cpp  calculate_nepforce.cpp  calculate_nepneighbor.cpp  calculate_nepvirial.cpp  calculate_virial_force.cpp  calculate_virial_force_grad.cpp  cpu_calculate_nepneighbor.cpp  nep_cpu.cpp
src/optimizer/: GKF.py  KFWrapper.py  KFWrapper_wu.py  LKF.py  SNES.py  kalmanfilter.py  kalmanfilter_dp.py
src/pre_data/: NN_seper.py  calc_feat_dp.py  cheby_data_loader.py  data_loader_2type.py  data_loader_2type_dp.py  data_loader_2type_nn_hybrid.py  data_loader_2type_wu.py  data_split.py  default_para.py  dfeat_sparse.py  dp_data_loader.py  dp_mlff.py  dp_mlff.py.backup  dpuni_data_loader.py  find_maxneighbor.py  gen_data.py  (+23 more)
utils/: all_unzip.sh  allzip.sh  atom_type_emb_dict.py  debug_operation.py  dp.pbs  dpdata2mvt.py  dpdata2mvt_bk.py  dpfrz.pbs  dptest.pbs  extract_movement.py  file_operation.py  find_neighbor_v0.2.py  gen_multi_train.py  get_weight_grad.py  json_operation.py  max_atoms_nep_lmps.py  movement_to_dp.py  mvm2xyz.py  mvms2xyz_train_valid.py  nep_to_gpumd.py  nep_xyz2pwdata.py  otr2mvt.py  outcar2movement  plot_mlff_inference.py  plot_nn_test.py  random_utils.py  read_torch_wij.py  read_torch_wij_correct.py  read_torch_wij_dp.py  test.py  to_nep_exyz.py  train_log.py  xyz_to_mvm.py
(+975 files in other folders)
